--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" href="Spider.svg" sizes="any" type="image/svg+xml">
     <title>Webby</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
