logo in, some small changes

--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A hobby-centric social media application"
     />
     <link rel="icon" href="Spider.svg" sizes="any" type="image/svg+xml">
     <title>Webby</title>
-
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
 </html>
