Spiders are now pngs. This fixes a bug with graph altering the spider svg when panning

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="A hobby-centric social media application"
     />
-    <link rel="icon" href="Spider.svg" sizes="any" type="image/svg+xml">
+    <link rel="icon" href="spider-dark-transparent.png" sizes="any" type="image/svg+xml">
     <title>Webby</title>
   </head>
   <body>
